// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostContent - Snapshots > matches snapshot with empty content 1`] = `
<div
  class="flex flex-col gap-3 rounded-2xl"
>
  <p
    class="text-base leading-6 font-medium text-secondary-foreground break-all whitespace-pre-line"
  />
</div>
`;

exports[`PostContent - Snapshots > matches snapshot with multiline content (preserves newlines) 1`] = `
<div
  class="flex flex-col gap-3 rounded-2xl"
>
  <p
    class="text-base leading-6 font-medium text-secondary-foreground break-all whitespace-pre-line"
  >
    Line 1
Line 2

Line 3
  </p>
</div>
`;

exports[`PostContent - Snapshots > matches snapshot with single-line content 1`] = `
<div
  class="flex flex-col gap-3 rounded-2xl"
>
  <p
    class="text-base leading-6 font-medium text-secondary-foreground break-all whitespace-pre-line"
  >
    One liner
  </p>
</div>
`;
